[package]
name = "wc"
version = "0.1.0"
authors = ["steve"]

[profile.release]
lto=true
opt-level = 3
panic = 'abort'
debug = true
debug-assertions = false
target-cpus='native'

[[bin]]
name = "text"
path = "src/text.rs"
crate-type = ["bin"]

[[bin]]
name = "wc"
path = "src/main.rs"
crate-type = ["bin"]

[[bin]]
name = "gb"
path = "src/gb.rs"
crate-type = ["bin"]

[[bin]]
name = "csv"
path = "src/csv.rs"
crate-type = ["bin"]

[dependencies]
bytecount = "0.2.0"
clap = "2.29.0"
rand="0.3"
heapsize = "0.4.1"
libc = "0.2.34"
fnv = "1.0.3"
csv = "1.0.0-beta.5"
